--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-shop",
-  "version": "0.1.0",
+  "version": "0.6.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,8 +17,9 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.10.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.46.2",
+    "@supabase/supabase-js": "^2.50.3",
     "@types/stripe": "^8.0.417",
+    "dotenv": "^17.0.1",
     "lucide-react": "^0.468.0",
     "next": "15.3.3",
     "react": "^19.0.0",
