--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-shop",
-  "version": "0.6.1",
+  "version": "0.6.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,8 +11,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
-    "prepare": "husky install || true",
-    "check-all": "npm run type-check && npm run lint:check && npm run format:check"
+    "prepare": "test -d .git && husky install 2>/dev/null || true",
+    "check-all": "npm run type-check && npm run lint:check && npm run format:check",
+    "create-test-user": "node scripts/create-test-user.js"
   },
   "dependencies": {
     "@stripe/stripe-js": "^4.10.0",
