--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,9 @@
     "target": "ES2017"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    ".next/types/app/geo-blocked/page.ts",
+    ".next/types/app/products/[id]/page.ts"
+  ]
 }
