--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "create-test-user": "node scripts/create-test-user.js"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@stripe/stripe-js": "^4.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.50.3",
     "@types/stripe": "^8.0.417",
+    "clsx": "^2.1.1",
     "dotenv": "^17.0.1",
     "lucide-react": "^0.468.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
