CDN static media (homepage .mp4) move to supbase storage bucket cdnmedia

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-shop",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,12 +18,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@playwright/test": "^1.53.2",
     "@stripe/stripe-js": "^4.10.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/supabase-js": "^2.50.4",
     "@types/stripe": "^8.0.417",
     "clsx": "^2.1.1",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.1.0",
     "lucide-react": "^0.468.0",
     "next": "15.3.3",
     "react": "^19.0.0",
